Fixed issue in CSS resulting in tiny font on mobile Added some simple CSS animations

--- a/src/main.css
+++ b/src/main.css
@@ -1,16 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
+* {
     font-family: 'Montserrat', sans-serif;
 }
 
-html, body{
+html, body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
     background: #232D49;
+    
 }
+
+html {
+    font-size: 18px;
+}
+
 
 body {
     display: flex;
@@ -25,7 +31,19 @@ body {
     bottom: 0;
 }
 
+@keyframes headerTransition {
+    0% {
+      opacity: 0;
+      transform: translateY(-100%);
+    }
+    100% {
+      opacity: 1.0;
+      transform: translateY(0);
+    }
+}
+
 header {
+    animation: 0.5s ease-out 0s 1 headerTransition;
     position: fixed;
     left: 0;
     top: 0;
@@ -78,7 +96,17 @@ main {
     margin: 0 20px;
 }
 
+@keyframes footerTransition {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1.0;
+    }
+}
+
 footer {
+    animation: 0.5s ease-out 0s 1 footerTransition;
     height: 25px;
     display: flex;
     justify-content: flex-end;
@@ -90,19 +118,13 @@ footer {
     z-index: 1
 }
 
-footer img{
-    width: 18px;
-}
-
 footer a:link, a:visited {
     color: white;
     text-decoration: none;
     font-weight: bold;
     display: flex;
     align-items: center;
-    width: 70px;
     flex-direction: row;
-    justify-content: space-between;
     background-color: transparent;
     position: relative;
 }
@@ -110,6 +132,12 @@ footer a:link, a:visited {
 footer a:hover {
     color: #00B8FF;
     transition: all .3s linear;
+}
+
+footer img{
+    max-height: 18px;
+    width: auto;
+    padding-right: 4px;
 }
 
 .codeLogo {
